# whats-up

./: .gitignore  Cargo.toml  README.md
haskell/: helease.cabal  package.yaml
haskell/src/: GHApi.hs  LocalGit.hs  Main.hs  Template.hs
haskell/test/: LocalGitSpec.hs
rust/: Cargo.toml
rust/src/: main.rs
src/: main.rs
v/: v.mod  velease_notes.tmpl
v/src/: cli.v  gh_api.v  template.v  utils.v  utils_test.v  velease.v
