[package]
name = "release-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
cmd_lib = "1.3.0"
futures = "0.3.21"
itertools = "0.10.3"
octocrab = "0.15.4"
structopt = "0.3.26"
tokio = { version = "1.17.0", features = ["full"] }
